<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".UserInput">

    <TextView
        android:id="@+id/title2"
        android:text="@string/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etxt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:hint="@string/hint2"
        />

    <Button
        android:id="@+id/user_bt"
        android:text="@string/validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>